--- a/mallet/pom.xml
+++ b/mallet/pom.xml
@@ -1,9 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>cc.mallet</groupId>
   <artifactId>mallet</artifactId>
-  <version>2.0.8</version>
+  <version>2.0.7-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>MAchine Learning for LanguagE Toolkit (MALLET)</name>
   <description>
@@ -20,77 +19,64 @@
     </license>
   </licenses>
   <scm>
-    <url>https://github.com/mimno/Mallet</url>
-    <connection>scm:git:git://github.com/mimno/Mallet.git</connection>
-    <developerConnection>scm:git:git@github.com:mimno/Mallet.git</developerConnection>
+    <url>http://hg-iesl.cs.umass.edu/hg/mallet</url>
   </scm>
-  <developers>
-    <developer>
-      <id>david.mimno</id>
-      <name>David Mimno</name>
-      <email>mimno@cornell.edu</email>
-    </developer>
-    <developer>
-      <id>gregory.druck</id>
-      <name>Gregory Druck</name>
-      <email>gdruck@cs.umass.edu</email>
-    </developer>
-  </developers>
-  <properties>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
-    <encoding>UTF-8</encoding>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>src</testSourceDirectory>
   </build>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.10</version>
-    </dependency>
-    <dependency>
-      <groupId>org.beanshell</groupId>
-      <artifactId>bsh</artifactId>
-      <version>2.0b4</version>
-    </dependency>
-    <dependency>
-      <groupId>jgrapht</groupId>
-      <artifactId>jgrapht</artifactId>
-      <version>0.6.0</version>
-    </dependency>
-    <dependency>
-      <groupId>net.sf.jwordnet</groupId>
-      <artifactId>jwnl</artifactId>
-      <version>1.4_rc3</version>
-    </dependency>
-    <dependency>
-      <groupId>net.sf.trove4j</groupId>
-      <artifactId>trove4j</artifactId>
-      <version>2.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.googlecode.matrix-toolkits-java</groupId>
-      <artifactId>mtj</artifactId>
-      <version>0.9.14</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jdom</groupId>
-      <artifactId>jdom</artifactId>
-      <version>1.1</version>
-    </dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.8.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>bsh</groupId>
+  		<artifactId>bsh</artifactId>
+  		<version>2.0b4</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>jgrapht</groupId>
+  		<artifactId>jgrapht</artifactId>
+  		<version>0.6.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>jwnl</groupId>
+  		<artifactId>jwnl</artifactId>
+  		<version>1.3.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>trove</groupId>
+  		<artifactId>trove</artifactId>
+  		<version>2.0.4</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>mtj</groupId>
+  		<artifactId>mtj</artifactId>
+  		<version>0.9.9</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.jdom</groupId>
+  		<artifactId>jdom</artifactId>
+  		<version>1.1</version>
+  	</dependency>
   </dependencies>
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
+  <repositories>
+    <!-- for JWNL -->
     <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <id>opennlp.sourceforge.net</id>
+      <url>http://opennlp.sourceforge.net/maven2</url>
     </repository>
-  </distributionManagement>
+    <!-- for Trove -->
+    <repository>
+      <id>maven.ontotext.com</id>
+      <url>http://maven.ontotext.com/archiva/repository/public</url>
+    </repository>
+    <!-- for MTJ -->
+    <repository>
+      <id>repo.scalanlp.org</id>
+      <url>http://repo.scalanlp.org/repo</url>
+    </repository>
+  </repositories>
 </project>
